--- a/contato.css
+++ b/contato.css
@@ -1,11 +1,4 @@
-:root {
-    --preto: #000000;
-    --amarelo: #c9a402; /* Amarelo escuro */
-    --cinza: #f0f0f0;
-    --branco: #ffffff;
-}
-
-
+@charset "UTF-8";
 
 .escudo {
     height: 150px;
@@ -184,4 +177,3 @@ nav a {
         grid-template-columns: 1fr;
     }
 }
-
