--- a/index.css
+++ b/index.css
@@ -1,9 +1,14 @@
 @charset "UTF-8";
 
+div{
+    text-align: center;
+    font-size: 16px;
+}
 
 /* Container que mantém a proporção 16:9 */
 .video-container {
     position: relative;
+    z-index: 1; /*vídeo fica atrás do menu*/
     width: 100%;
     max-width: 900px; /* tamanho máximo do vídeo */
     margin: 20px auto; /* centraliza */
@@ -12,6 +17,18 @@
     overflow: hidden;
     border-radius: 12px;
     box-shadow: 0 0 10px #0004;
+}
+
+.tema{
+    font-size:50px;
+    padding-top: 0px;
+    text-align: center;
+}
+
+.evento{
+    font-size:30px;
+    padding-top: 0px;
+    text-align: center;
 }
 
 /* Ajuste do iframe dentro do container */
@@ -30,6 +47,7 @@ main{
     justify-content: center;
     gap: 20px;
     position: relative;
+    padding: 20px;
 
 }
 
