--- a/jogos.css
+++ b/jogos.css
@@ -1,3 +1,9 @@
+
+h1{
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 /* ===================================================================
    GALERIA DE FOTOS - LAYOUT GERAL
    5 fotos por linha no computador
@@ -21,6 +27,10 @@
     max-width: 200px; /* largura máxima da foto */
     text-align: center;
     box-shadow: 04px 4px 4px 4px rgba(2, 2, 2, 2);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    
 }
 
 /* ===================================================================
