--- a/jogos.css
+++ b/jogos.css
@@ -30,6 +30,7 @@ h1{
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
+    max-height: 450px;
     
 }
 
@@ -39,7 +40,7 @@ h1{
    =================================================================== */
 .imagem-container img {
     width: 100%;
-    height: 350px;      /* pode ajustar */
+    max-height: 450px;      /* pode ajustar */
     object-fit: cover;  /* mantém a proporção bonita */
     object-position: top; /* PRIORIDADE: mostrar o rosto */
     border-radius: 10px;
