--- a/jogos.css
+++ b/jogos.css
@@ -5,6 +5,14 @@ h1{
     padding-bottom: 50px;
 }
 
+div > h1 {
+    padding: 30px;
+    margin-top: 30px;
+    background: linear-gradient(to right, black,#c9a402); /* preto → cinza */
+    color: #c9a402;
+}
+
+
 /* ===================================================================
    GALERIA DE FOTOS
    =================================================================== */
