--- a/elenco.css
+++ b/elenco.css
@@ -21,6 +21,7 @@ div > h1 {
     margin-top: 30px;
     background: linear-gradient(to right, black,#c9a402); /* preto → cinza */
     color: #c9a402;
+    text-align: center;
 }
 
 
@@ -78,3 +79,4 @@ div > h1 {
         object-position: top; /* mantém o rosto */
     }
 }
+
