--- a/contato.css
+++ b/contato.css
@@ -10,11 +10,23 @@
     text-align: center;
 }
 
+h2{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+}
+
+form{
+    margin-bottom: 30px;
+    margin-left: 30px;
+}
+
 div > h1 {
     padding: 30px;
     margin-top: 30px;
     background: linear-gradient(to right, black,#c9a402); /* preto → cinza */
     color: #c9a402;
+    text-align: center;
 }
 
 .galeria-elenco {
