--- a/sobre.css
+++ b/sobre.css
@@ -11,6 +11,20 @@ padding-left: 30px;
 padding-right: 30px;
 }
 
+h1{
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+div > h1 {
+    padding: 30px;
+    margin-top: 30px;
+    background: linear-gradient(to right, black,#c9a402); /* preto → cinza */
+    color: #c9a402;
+}
+
+
 p{
     padding-left: 50px;
     padding-right: 50px;
