--- a/sobre.css
+++ b/sobre.css
@@ -22,6 +22,7 @@ div > h1 {
     margin-top: 30px;
     background: linear-gradient(to right, black,#c9a402); /* preto → cinza */
     color: #c9a402;
+    text-align: center;
 }
 
 
@@ -252,3 +253,4 @@ h1{
         grid-template-columns: 1fr;
     }
 }
+
